K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: lasting/platformservice
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
            - containerPort: 666
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: plaformgrpc
      protocol: TCP
      port: 666
      targetPort: 666
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: platformservice
  ports:
    - port: 8080
      targetPort: 80
